Use Mixins and Rename Gold to Flagship

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -11,7 +11,7 @@ $news-maroon: #5A162E;
 
 $music-purple: #562179;
 
-$gold: #feb93a;
+$flagship: #feb93a;
 
 $primary-color: $ury-blue-color;
 $secondary-color: tint($ury-blue-color, 80%);
