--- a/sass/elements/_schedule.scss
+++ b/sass/elements/_schedule.scss
@@ -1,90 +1,46 @@
-.schedule-blocks-regular {
-    background-color: $primary-color;
-    a {
-        color: $off-white-color;
-    } 
-    &:hover {
-        background-color: tint($primary-color, 60%);
-    } 
+@mixin schedule-block($bg-color, $txt-color) {
+  background-color: $bg-color;
+  a {
+    color: $txt-color;
+  } 
+  &:hover {
+    background-color: tint($bg-color, 60%);
+  } 
 }
 
 .schedule-blocks-sustainer {
-    background-color: $secondary-color;
-    color: $off-white-color;
+  background-color: $secondary-color;
+  color: $off-white-color;
+}
+
+.schedule-blocks-regular {
+  @include schedule-block($primary-color, $off-white-color);
 }
 
 .schedule-blocks-flagship {
-    background-color: $gold;
-    a {
-        color: $black;
-    }
-    &:hover {
-        background-color: tint($gold, 60%);
-    }
+  @include schedule-block($flagship, $black);
 }
 
 .schedule-blocks-news {
-    background-color: $news-maroon;
-    a {
-        color: $off-white-color;
-    }
-    &:hover {
-        background-color: tint($news-maroon, 60%);
-    }
+  @include schedule-block($news-maroon, $off-white-color);
 }
 
 .schedule-blocks-speech {
-    background-color: $speech-green;
-    a {
-        color: $off-white-color;
-    }
-    &:hover {
-        background-color: tint($speech-green, 60%);
-    }
+  @include schedule-block($speech-green, $off-white-color);
 }
 
 .schedule-blocks-music {
-    background-color: $music-purple;
-    a {
-        color: $off-white-color;
-    }
-    &:hover {
-        background-color: tint($music-purple, 60%);
-    }
+  @include schedule-block($music-purple,$off-white-color);
 }
 
 .schedule-blocks-event {
-    background-color: $red;
-    a {
-        color: $off-white-color;
-    }
-    &:hover {
-        background-color: tint($red, 60%);
-    }
+  @include schedule-block($red, $off-white-color);
 }
 
 .schedule-blocks-specialistMusic {
-    background-color: tint($music-purple,60%);
-    a {
-        color: $white;
-    }
-    &:hover {
-        background-color: tint($music-purple, 20%);
-        a {
-            color: $black;
-        }
-    }
+  @include schedule-block(tint($music-purple,60%),$white);
 }
 
 .schedule-blocks-specialistInterest {
-    background-color: tint($speech-green,60%);
-    a {
-        color: $white;
-    }
-    &:hover {
-        background-color: tint($speech-green, 20%);
-        a {
-            color: $black;
-        }
-    }
+  @include schedule-block(tint($speech-green,60%),$white);
 }
