remove old method; use template level functions

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -58,7 +58,12 @@
     <div class="row">
       {{range $key, $value := .CreditsToUsers}}
       <div class="col-sm-4 pb-3">
-        <h3>{{$key}}</h3>
+        {{$presenters := len $value}}
+        {{if gt $presenters 1}}
+          <h3>{{plural $key}}</h3>
+        {{else}}
+          <h3>{{$key}}</h3>
+        {{end}}
         {{range $value}}
         <a href="/people/{{.MemberID}}/">{{.Fname}} {{.Sname}}</a> <br>
         {{end}}
