--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -109,7 +109,7 @@
           </div>
           <div class="form-group">
             <label for="college">College</label>
-            <select id="college" name="college" class="form-control">
+            <select id="college" name="collegeid" class="form-control">
               {{range .Colleges}}
                 <option value="{{.CollegeId}}">{{.CollegeName}}</option>
               {{end}}
