--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -73,8 +73,7 @@
     <div class="row">
       {{range $key, $value := .CreditsToUsers}}
       <div class="col-sm-4 pb-3">
-        {{$presenters := len $value}}
-        {{if gt $presenters 1}}
+        {{if gt (len $value) 1}}
           <h3>{{plural $key}}</h3>
         {{else}}
           <h3>{{$key}}</h3>
