--- a/views/teams.tmpl
+++ b/views/teams.tmpl
@@ -1,3 +1,4 @@
+{{define "title"}}{{.PageContext.ShortName}} | Our Teams{{end}}
 {{define "content"}}
   {{with .PageData}}
   <div class="container-fluid banner-2 text-overlay">
