Fix cards for teams with ellipsis.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -141,6 +141,53 @@ footer {
   color: white;
 }
 
+.team-card .card-body {
+  height: 11em;
+}
+
+/* styles for '...' */
+.team-card .card-text {
+  /* hide text if it more than N lines  */
+  overflow: hidden;
+  /* for set '...' in absolute position */
+  position: relative;
+  /* use this value to count block height */
+  line-height: 1.2em;
+  /* max-height = line-height (1.2) * lines max number (3) */
+  max-height: 5.9em;
+  /* fix problem when last visible word doesn't adjoin right side  */
+  text-align: justify;
+  /* place for '...' */
+  margin-right: -1em;
+  padding-right: 1em;
+}
+/* create the ... */
+.team-card .card-text:before {
+  /* points in the end */
+  content: '...';
+  /* absolute position */
+  position: absolute;
+  /* set position to right bottom corner of block */
+  right: 1em;
+  bottom: 0.2em;
+  background: #fff;
+}
+/* hide ... if we have text, which is less than or equal to max lines */
+.team-card .card-text:after {
+  /* points in the end */
+  content: '';
+  /* absolute position */
+  position: absolute;
+  /* set position to right bottom corner of text */
+  right: 1em;
+  /* set width and height */
+  width: 1em;
+  height: 1em;
+  margin-top: 0.2em;
+  /* bg color = bg color under block */
+  background: white;
+}
+
 .page404 {
   text-align: center;
   margin: 0 auto;
