Make team header smaller.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -80,6 +80,10 @@ footer {
   padding: 10em 0;
 }
 
+.banner-2.slim {
+  padding: 6em 0 3em 0;
+}
+
 /* Scroll horizontal, used for horizontal scrolling rows */
 .scroll-horiz {
   overflow-x: scroll;
