--- a/views/team.tmpl
+++ b/views/team.tmpl
@@ -13,11 +13,11 @@
 
 {{define "content"}}
   {{with .PageData}}
-    <div class="container-fluid banner-2 text-overlay">
+    <div class="container-fluid banner-2 slim text-overlay">
       <div class="container">
         <div class="row justify-content-center">
           <div class="text-center">
-            <h1 class="display-4"><a href="{{url "/teams/"}}" title="View all teams">Our Teams</a></h1>
+            <h1 class="display-5"><a href="{{url "/teams/"}}" title="View all teams">Our Teams</a></h1>
             <h2 class="display-5">The people who make URY happen!</h2>
             <br>
             <a href="/getinvolved/#signUp" class="btn btn-primary-inverse btn-md">Be part of one!</a>
