--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -16,6 +16,7 @@ $secondary-color: tint($ury-blue-color, 80%);
 $third-color: tint($ury-blue-color, 60%);
 $off-white-color: #e1e1e1;
 
+$white: #ffffff;
 $blue: #0073e6;
 $red: #d0011b;
 
