--- a/sass/main.scss
+++ b/sass/main.scss
@@ -76,8 +76,9 @@ footer {
 .banner-2 {
   background: url("/images/bg-banner-2.jpg") center center no-repeat;
   background-size: cover;
-  color: white;
+  color: $white;
   padding: 10em 0;
+
   .slim {
     padding: 6em 0 3em;
   }
@@ -136,12 +137,12 @@ footer {
 
 .user-credits-people {
   background-color: $primary-color;
-  color: white;
+  color: $white;
 }
 
 .user-on-demand {
   background-color: $secondary-color;
-  color: white;
+  color: $white;
 }
 
 .team-card .card-body {
@@ -173,7 +174,7 @@ footer {
   // set position to right bottom corner of block
   right: 1em;
   bottom: 0.2em;
-  background: white;
+  background: $white;
 }
 // hide ... if we have text, which is less than or equal to max lines
 .team-card .card-text::after {
@@ -188,7 +189,7 @@ footer {
   height: 1em;
   margin-top: 0.2em;
   // bg color = bg color under block
-  background: white;
+  background: $white;
 }
 
 .page404 {
