--- a/views/team.tmpl
+++ b/views/team.tmpl
@@ -20,7 +20,7 @@
             <h1 class="display-5"><a href="{{url "/teams/"}}" title="View all teams">Our Teams</a></h1>
             <h2 class="display-5">The people who make URY happen!</h2>
             <br>
-            <a href="/getinvolved/#signUp" class="btn btn-primary-inverse btn-md">Be part of one!</a>
+            <a href="/getinvolved/#signUp" class="btn btn-primary-inverse btn-lg">Be part of one!</a>
           </div>
         </div>
       </div>
