--- a/views/teams.tmpl
+++ b/views/teams.tmpl
@@ -8,7 +8,7 @@
           <h1 class="display-3">Our Teams</h1>
           <h2 class="display-4">The people who make URY happen!</h2>
           <br>
-          <a href="{{url "/getinvolved/#signUp"}}" class="btn btn-primary-inverse btn-lg">Be part of one!</a>
+          <a href="{{url "/getinvolved/#signUp"}}" class="btn btn-primary-inverse btn-xl">Be part of one!</a>
         </div>
       </div>
     </div>
