--- a/sass/main.scss
+++ b/sass/main.scss
@@ -40,21 +40,21 @@ html {
   }
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
+// Everything but the jumbotron gets side spacing for mobile first views
 
 .header, .footer {
   padding-right: 15px;
   padding-left: 15px;
 }
 
-/* Custom page header */
+// Custom page header
 
 .header {
   padding-bottom: 20px;
   border-bottom: 1px solid #e5e5e5;
 }
 
-/* Make the masthead heading the same height as the navigation */
+// Make the masthead heading the same height as the navigation
 
 .header h3 {
   margin-top: 0;
@@ -62,7 +62,7 @@ html {
   line-height: 40px;
 }
 
-/* Custom page footer */
+// Custom page footer
 
 footer {
   color: #777;
@@ -76,11 +76,15 @@ footer {
 .banner-2 {
   background: url("/images/bg-banner-2.jpg") center center no-repeat;
   background-size: cover;
-  color: white;
+  color: $white;
   padding: 10em 0;
+
+  .slim {
+    padding: 6em 0 3em;
+  }
 }
 
-/* Scroll horizontal, used for horizontal scrolling rows */
+// Scroll horizontal, used for horizontal scrolling rows
 .scroll-horiz {
   overflow-x: scroll;
   overflow-y: hidden;
@@ -103,16 +107,19 @@ footer {
   font-weight: 100;
 }
 
-/* User page styling. */
+// User page styling.
 .user-img {
   //border: #e1e1e1 7px solid;
   background-color: $primary-color;
   border-radius: 100%;
   height: 0;
-  margin-top: -3em;
   overflow: hidden;
   padding-bottom: 100%;
   position: relative;
+
+  &.profile {
+    margin-top: -3em;
+  }
 
   img {
     background-position: center center;
@@ -130,12 +137,35 @@ footer {
 
 .user-credits-people {
   background-color: $primary-color;
-  color: white;
+  color: $white;
 }
 
 .user-on-demand {
   background-color: $secondary-color;
-  color: white;
+  color: $white;
+}
+
+.team-card {
+  .card-body {
+    height: 12em;
+  }
+
+  .card-text {
+    position: relative;
+    height: 7.5em; // exactly 5 lines
+    overflow: hidden;
+
+    &::after {
+      content: "";
+      text-align: right;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 70%;
+      height: 1.5em;
+      background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%); // scss-lint:disable ColorVariable
+    }
+  }
 }
 
 .page404 {
@@ -181,17 +211,17 @@ footer {
   }
 }
 
-/* Responsive: Portrait tablets and up */
+// Responsive: Portrait tablets and up
 
 @media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
+  // Remove the padding we set earlier
   .header {
     padding-right: 0;
     padding-left: 0;
     margin-bottom: 30px;
   }
 
-  /* Remove the bottom border on the jumbotron for visual effect */
+  // Remove the bottom border on the jumbotron for visual effect
   .jumbotron {
     border-bottom: 0;
   }
@@ -201,7 +231,7 @@ footer {
   }
 }
 
-/* Main marketing message and sign up button */
+// Main marketing message and sign up button
 
 .jumbotron {
   text-align: center;
@@ -238,7 +268,7 @@ footer {
   }
 }
 
-/* Show/Season/Timeslot specific*/
+// Show/Season/Timeslot specific
 
 .mixcloud {
   background: #FCFCFC;
