Various style fixes

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -47,7 +47,7 @@
     <h2>Podcasts</h2>
     <div class="row scroll-horiz">
       {{range .Podcasts}}
-      <div class="col-11 col-sm-7 col-md-3 col-lg-2">
+      <div class="col-11 col-sm-7 col-md-3 col-xl-2">
           <div class="card podcast bg-secondary">
             <a href="{{.MicrositeLink.URL}}" title="URY Podcast: {{.Title}}">
               <img class="card-img-top" src="https://ury.org.uk{{.Photo}}" alt="URY Podcast: {{.Title}}">
