--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -58,14 +58,14 @@
 </div>
 {{if .PageData.LatestPodcasts}}
 <div id="index-uryplayer" class="container-fluid container-padded bg-third">
-  <h2>Latest Podcasts</h2>
+  <h2 class="text-left">Latest Podcasts</h2><a href="podcasts/" class="text-right" title="View All Podcasts">View all Podcasts</a>
   <div class="row scroll-horiz">
     {{range .PageData.LatestPodcasts}}
-    <div class="col-11 col-sm-7 col-md-3">
+    <div class="col-11 col-sm-7 col-md-3 col-xl-2">
       <a href="{{.MicrositeLink.URL}}" title="URY Podcast: {{.Title}}">
         <div class="card podcast">
           <img class="card-img-top img-fluid" src="https://ury.org.uk{{.Photo}}" alt="URY Podcast: {{.Title}}">
-          <div class="card-block bg-primary">
+          <div class="card-body bg-secondary">
             <h4 class="card-title ellipsis">{{.Title}}</h4>
             <h5>{{.Time.Format "Monday, _2 Jan 2006"}}</h5>
             <p class="card-text ellipsis">{{html .Description}}</p>
