Move (WIP) to /ontap/

--- a/views/podcast.tmpl
+++ b/views/podcast.tmpl
@@ -8,10 +8,10 @@
 				<div class="row align-items-end text-center">
 					<div class="col">
 						<h1 class="header-title">
-								<a href="/uryplayer/" title="Go back to {{.PageContext.ODName}}">
+								<a href="{{url "/ontap/"}}" title="Go back to {{.PageContext.ODName}}">
 									{{- .PageContext.ODName -}}
 								</a>
-								<a href="/uryplayer/podcasts/" title="Go back to all podcasts.">Podcast</a>
+								<a href="{{url "/podcasts/"}}" title="Go back to all podcasts.">Podcast</a>
 						</h1>
 					</div>
 				</div>
