--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -11,7 +11,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="{{url "/schedule/thisweek" }}">Schedule</a>
         <a class="nav-item nav-link" href="#">Shows</a>
-        <a class="nav-item nav-link" href="{{url "/uryplayer/"}}">{{.PageContext.ODName}}</a>
+        <a class="nav-item nav-link" href="{{url "/ontap/"}}">{{.PageContext.ODName}}</a>
         <a class="nav-item nav-link" href="{{url "/about/"}}">About Us</a>
         <a class="nav-item nav-link" href="{{url "/teams/"}}">Teams</a>
         <a class="nav-item nav-link" href="{{url "/getinvolved/"}}">Get Involved</a>
