--- a/views/podcasts.tmpl
+++ b/views/podcasts.tmpl
@@ -7,7 +7,7 @@
 				<div class="row align-items-end text-center">
 					<div class="col">
 						<h1 class="header-title">
-								<a href="/uryplayer/" title="Go back to {{.PageContext.ODName}}">
+								<a href="{{url "/ontap/"}}" title="Go back to {{.PageContext.ODName}}">
 									{{- .PageContext.ODName -}}
 								</a>
 								Podcasts
