Custom scrollbar for podcasts

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -45,7 +45,7 @@
   {{if .Podcasts}}
   <div id="index-podcasts" class="container-fluid container-padded bg-third">
     <h2>Podcasts</h2>
-    <div class="row scroll-horiz">
+    <div class="row scroll-horiz pb-3 custom-scrollbar">
       {{range .Podcasts}}
       <div class="col-11 col-sm-7 col-md-3 col-xl-2">
           <div class="card podcast bg-secondary">
