Make message box a backend post

--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -2,8 +2,13 @@
 {{with .}}
 <h2>Send a Message</h2>
 <hr>
-<form id="studiomessage">
-  <textarea class="form-control" id="comments" name="comments" rows="4" placeholder="Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"></textarea>
+<form id="studiomessage" action="/" method="post">
+  <textarea class="form-control" id="comments" name="message" rows="4" placeholder=
+  {{if .MsgBoxPrompt}}
+  	"Message cannot be sent at this time. Is Jukebox on Air?"
+  {{else}}
+  	"Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"
+  {{end}}></textarea>
   <button id="messagesend"  class="btn btn-primary btn-block" type="submit" value="SEND MESSAGE">Send Message</button>
 </form>
 <p class="pt-1">You can also text on <a href="sms:+447851101313">07851 101 313</a></p>
