--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -4,7 +4,7 @@
 <hr>
 <form id="studiomessage" action="/" method="post">
   <textarea class="form-control" id="comments" name="message" rows="4" placeholder=
-  {{if .MsgBoxPrompt}}
+  {{if .MsgBoxError}}
   	"Message cannot be sent at this time. Is Jukebox on Air?"
   {{else}}
   	"Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"
