--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -5,11 +5,17 @@
 <form id="studiomessage" action="/" method="post">
   <textarea class="form-control" id="comments" name="message" rows="4" placeholder=
   {{if .MsgBoxError}}
-  	"Message cannot be sent at this time. Is Jukebox on Air?"
+  	"Message cannot be sent at this time, please try again later."
+  {{else if .JukeboxOnAir}}
+  	"No shows are on air right now." disabled 
   {{else}}
   	"Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"
   {{end}}></textarea>
-  <button id="messagesend"  class="btn btn-primary btn-block" type="submit" value="SEND MESSAGE">Send Message</button>
+  <button id="messagesend"  class="btn btn-primary btn-block" type="submit" value="SEND MESSAGE"
+  {{if .JukeboxOnAir}}
+  	disabled
+  {{end}} 
+  >Send Message</button>
 </form>
 <p class="pt-1">You can also text on <a href="sms:+447851101313">07851 101 313</a></p>
 {{end}}
