--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -7,7 +7,7 @@
   {{if .MsgBoxError}}
   	"Message cannot be sent at this time, please try again later."
   {{else if .JukeboxOnAir}}
-  	"No shows are on air right now." disabled 
+  	"No shows are on air right now, so there's no-one to send a message to." disabled 
   {{else}}
   	"Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"
   {{end}}></textarea>
