--- a/sass/main.scss
+++ b/sass/main.scss
@@ -197,6 +197,15 @@ footer {
   .podcast-audio {
     width: 100%;
   }
+  .card-title {
+    margin-top: 10px;
+  }
+  .podcast-description p, .podcast-description span {
+    font-size: 15px !important;
+    font-family: "Roboto", sans-serif !important;
+    font-weight: 300 !important;
+    font-variant-ligatures: none !important;
+  }
 }
 
 .page404 {
