--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -25,11 +25,11 @@
 </div>
 <div id="index-just-missed" class="container-fluid container-padded bg-primary">
   <h2>You Just Missed...</h2>
-  <div class="row scroll-horiz">
+  <div class="row scroll-horiz pb-3 custom-scrollbar">
     {{range .PageData.LatestTimeslots}}
       <div class="col-11 col-sm-7 col-md-5 col-lg-4">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 pr-0">
             <img class="card-img-top img-fluid" src="
             {{if .Season.ShowMeta.Photo}}
             https://ury.org.uk{{.Season.ShowMeta.Photo}}
@@ -38,8 +38,8 @@
             {{end}}
           " alt="{{.Title}} Logo">
           </div>
-          <div class="col-md-8">
-            <div class="card-block bg-primary">
+          <div class="col-md-8 bg-secondary p-3">
+            <div class="card-block">
               <h4 class="card-title ellipsis"><a href="/schedule/shows/timeslots/{{.TimeslotID}}/">{{.Title}}</a></h4>
               <h5>{{.StartTime.Format "Monday, _2 Jan 2006 - 15:04"}} - {{.Duration}}</h5>
               <p class="card-text ellipsis">{{html .Description}}</p>
@@ -53,13 +53,13 @@
 </div>
 <div id="index-videos" class="container-fluid container-padded bg-secondary">
   <h2>{{.PageContext.ShortName}} on Youtube</h2>
-  <div id="youtube-video-slider" class="row scroll-horiz">
+  <div id="youtube-video-slider" class="row scroll-horiz pb-3 custom-scrollbar">
   </div>
 </div>
 {{if .PageData.LatestPodcasts}}
 <div id="index-uryplayer" class="container-fluid container-padded bg-third">
   <h2 class="text-left">Latest Podcasts</h2><a href="podcasts/" class="text-right" title="View All Podcasts">View all Podcasts</a>
-  <div class="row scroll-horiz">
+  <div class="row scroll-horiz pb-3 custom-scrollbar">
     {{range .PageData.LatestPodcasts}}
     <div class="col-11 col-sm-7 col-md-3 col-xl-2">
       <a href="{{.MicrositeLink.URL}}" title="URY Podcast: {{.Title}}">
