corrected all podcasts link.

--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -59,7 +59,7 @@
 {{if .PageData.LatestPodcasts}}
 <div id="index-podcasts" class="container-fluid container-padded bg-third">
   <h2>Latest Podcasts</h2>
-  <a href="podcasts/" class="text-right" title="View All Podcasts">View all Podcasts</a>
+  <a href="/podcasts/" class="text-right" title="View All Podcasts">View all Podcasts</a>
   <div class="row scroll-horiz pb-3 custom-scrollbar">
 
       {{range .PageData.LatestPodcasts}}
