--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -17,7 +17,7 @@
   <div class="container container-padded">
     <div class="row align-items-center text-center">
       <div class="col">
-        <h1 class="display-3">{{.PageContext.ODName}}</h1>
+        <h1 class="display-3">{{.PageContext.ShortName}} {{.PageContext.ODName}}</h1>
         <h2 class="display-5">Refreshing content when you need it the most.</h2>
       </div>
     </div>
@@ -52,16 +52,29 @@
   </div>
 </div>
 <div id="index-videos" class="container-fluid container-padded bg-secondary">
-  <h2>{{.PageContext.ShortName}} on Youtube</h2>
+  <div class="row">
+    <div class="col-12 col-md-8">
+      <h2>{{.PageContext.ShortName}} on Youtube</h2>
+    </div>
+    <div class="col-12 col-md-4">
+      <a href="{{.PageContext.Youtube.ChannelURL}}" class="btn btn-primary-inverse btn-sm float-right" title="View All Podcasts">View all Videos</a>
+    </div>
+  </div>
+  <h2> </h2>
   <div id="youtube-video-slider" class="row scroll-horiz pb-3 custom-scrollbar">
   </div>
 </div>
 {{if .PageData.LatestPodcasts}}
 <div id="index-podcasts" class="container-fluid container-padded bg-third">
-  <h2>Latest Podcasts</h2>
-  <a href="/podcasts/" class="text-right" title="View All Podcasts">View all Podcasts</a>
+  <div class="row">
+    <div class="col-12 col-md-8">
+      <h2>Latest Podcasts</h2>
+    </div>
+    <div class="col-12 col-md-4">
+      <a href="/podcasts/" class="btn btn-primary-inverse btn-sm float-right" title="View All Podcasts">View all Podcasts</a>
+    </div>
+  </div>
   <div class="row scroll-horiz pb-3 custom-scrollbar">
-
       {{range .PageData.LatestPodcasts}}
           <div class="col-11 col-sm-6 col-lg-4">
             <div class="row bg-primary m-1 uryplayer-podcast">
