--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -13,7 +13,7 @@ $button-color: #fff;
     color: $button-color;
     border: 2px solid $button-color;
 
-    &:hover {
+    &:hover:not(:disabled)  {
       background: $button-color;
       color: $blue;
     }
@@ -24,7 +24,7 @@ $button-color: #fff;
     color: $blue;
     border: 2px solid $button-color;
 
-    &:hover {
+    &:hover:not(:disabled)  {
       background: $blue;
       color: $button-color;
     }
@@ -35,7 +35,7 @@ $button-color: #fff;
     color: $button-color;
     border: 2px solid $button-color;
 
-    &:hover {
+    &:hover:not(:disabled) {
       background: $button-color;
       color: $red;
     }
