--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -2,7 +2,7 @@ $button-color: #fff;
 
 .btn {
   border-radius: .4em;
-  padding: .25em 1em;
+  padding: .25em 0;
   font-family: $font-family-heading;
   font-weight: 500;
   font-size: 1rem;
