--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -44,28 +44,34 @@
   </div>
   {{if .Podcasts}}
   <div id="index-podcasts" class="container-fluid container-padded bg-third">
-    <h2>Podcasts</h2>
+    <div class="row">
+      <div class="col-12 col-md-8">
+        <h2>Latest Podcasts</h2>
+      </div>
+      <div class="col-12 col-md-4">
+        <a href="/podcasts/" class="btn btn-primary-inverse btn-sm float-right" title="View All Podcasts">View all Podcasts</a>
+      </div>
+    </div>
     <div class="row scroll-horiz pb-3 custom-scrollbar">
-
-        {{range .Podcasts}}
-            <div class="col-11 col-sm-6 col-lg-4">
-              <div class="row bg-primary m-1 uryplayer-podcast">
-                <div class="col-md-4 p-0">
-                  <img class="card-img-top img-fluid p-0" src="https://ury.org.uk{{.Photo}}" alt="URY Podcast: {{.Title}}">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-block">
-                    <h4 class="card-title ellipsis"><a href="{{.MicrositeLink.URL}}" title="URY Podcast: {{.Title}}">{{.Title}}</a></h4>
-                    <h5>{{.Time.Format "Monday, _2 Jan 2006"}}</h5>
-                    <div class="podcast-description card-text ellipsis">
-                      <p>{{html .Description}}</p>
-                    </div>
-                    <a href="{{.MicrositeLink.URL}}" title="URY Podcast: {{.Title}}">Listen Now</a>
+      {{range .Podcasts}}
+          <div class="col-11 col-sm-6 col-lg-4">
+            <div class="row bg-primary m-1 uryplayer-podcast">
+              <div class="col-md-4 p-0">
+                <img class="card-img-top img-fluid p-0" src="https://ury.org.uk{{.Photo}}" alt="URY Podcast: {{.Title}}">
+              </div>
+              <div class="col-md-8">
+                <div class="card-block">
+                  <h4 class="card-title ellipsis"><a href="{{.MicrositeLink.URL}}" title="URY Podcast: {{.Title}}">{{.Title}}</a></h4>
+                  <h5>{{.Time.Format "Monday, _2 Jan 2006"}}</h5>
+                  <div class="podcast-description card-text ellipsis">
+                    <p>{{html .Description}}</p>
                   </div>
+                  <a href="{{.MicrositeLink.URL}}" title="URY Podcast: {{.Title}}">Listen Now</a>
                 </div>
               </div>
             </div>
-        {{end}}
+          </div>
+      {{end}}
     </div>
   </div>
   {{end}}
